@@ -4,6 +4,10 @@ Changelog
 4.0 (unreleased)
 ----------------
 
+- Raise `RuntimeError: Recursion detected in acquisition wrapper` if an object
+  with a `__parent__` pointer points to a wrapper that in turn points to the
+  original object.
+
 - Prevent wrappers to be created while accessing `__parent__` on types derived
   from Explicit or Implicit base classes.
 
